<?xml version="1.0"?>
<package>
  <name>rosgo_core</name>
  <version>0.1.0</version>
  <description>ROS client library for Go programming language</description>

  <maintainer email="akio7141@gmail.com">Aki Ochiai</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosgo_messages</build_depend>

  <export></export>
</package>
