<?xml version="1.0"?>
<package>
  <name>rosgo</name>
  <version>0.0.0</version>
  <description>ROS client library for Go programming language</description>

  <maintainer email="akio7141@gmail.com">Akiyoshi Ochiai</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosgo_messages</build_depend>

  <export></export>
</package>
